# weekforge

./: .agents  .dev-agents  .env.template  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  GEMINI.md  README.md  SKILLS.md  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/notes/: tier0-thin-extraction.md
docs/: development_workflow.md
docs/agents/: domain.md  issue-tracker.md
docs/specs/: remove-rigid-semantic-analysis.md
specs/: 00-system-overview.md  01-agentic-patterns.md  02-state-schema.md  03-failure-modes.md  04-migration-phases.md  _index.md  decision-log.md  spec-template.md  traceability-matrix.md
specs/cross-cutting/: observability.md  prompt-architecture.md  testing-strategy.md
specs/features/: lifecycle-a-generation.md  lifecycle-a-planning.md  lifecycle-b-extraction.md  lifecycle-c-terminal.md
specs/issues/: 01-remove-rigid-semantic-analysis.md
specs/reference/: architecture.md  failure-modes.md  patterns.md  prompt-style.md  state-schema.md
specs/remove-rigid-semantic-analysis/: PRD.md
specs/steps/: step-0a-minimal-graph.md  step-0a-minimal-workflow.md  step-0b-notion-tools.md  step-0c-llm-integration.md  step-0d-end-to-end.md  step-1-extraction.md  step-1a-context-and-cli.md  step-1b-tier0-extraction.md  step-1c-summary-agent.md  step-1d-notion-write-and-plan-state.md  step-1e-summary-formatting.md  (+10 more)
tests/: conftest.py  test_checkpoint.py  test_cli.py  test_hitl.py
(+122 files in other folders)
