[project]
name = "weekforge"
version = "0.1.0"
description = "Training week lifecycle manager."
requires-python = ">=3.13"
dependencies = [
    "pydantic-ai>=0.0.14",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.13.1",
    "typer>=0.12.3",
    "rich>=13.7.1",
    "notion-client==3.0.0",
    "python-dotenv>=1.2.2",
    "tenacity>=9.1.4",
]

[project.scripts]
weekforge = "weekforge.cli:app"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.3.2",
    "ruff>=0.5.5",
    "mypy>=1.11.1",
    "pytest-mock>=3.15.1",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"] # pyflakes, pycodestyle, isort, pyupgrade
ignore = ["E501"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["tests"]
